<resources>
    <string name="app_name">CSix Connect</string>
    <string name="action_settings">Settings</string>
    <string name="csix">CSix Connect</string>
    <string name="content_authority">org.csix</string>

    <!-- Navigation Drawer -->
    <string name="open_navigation_drawer">Open navigation drawer</string>
    <string name="close_navigation_drawer">Close navigation drawer</string>
    <string name="drawer_title_events">Events</string>
    <string name="drawer_title_direction">Direction</string>
    <string name="drawer_title_groups">Groups</string>
    <string name="drawer_title_about">About</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="nav_header_layout">Navigation Drawer Header Layout</string>
    <string name="nav_drawers">Navigation Drawers</string>

    <!-- Activity Titles -->
    <string name="activity_title_event_details">Event Details</string>
    <string name="activity_title_group_details">Group Details</string>
    <string name="activity_title_direction">Direction</string>
    <string name="activity_title_about">About</string>
    <string name="activity_title_settings">Settings</string>

    <string name="empty_event_list">No Event Information Available</string>
    <string name="empty_group_list">No Group Information Available</string>
    <string name="empty_about_list">No About Information Available</string>

    <string name="event_fragment_layout">Event Fragment Layout</string>
    <string name="group_fragment_layout">Group Fragment Layout</string>
    <string name="about_fragment_layout">About Fragment Layout</string>
    <string name="event_empty_view">Event Empty View</string>
    <string name="group_empty_view">Group Empty View</string>
    <string name="about_empty_view">About Empty View</string>

    <string name="action_share">Share</string>
    <string name="adview">Adview</string>

    <string name="recyclerview_group">Group RecyclerView</string>
    <string name="recyclerview_event">Event RecyclerView</string>
    <string name="recyclerview_about">About RecyclerView</string>

    <string name="image_church">Image of Saratoga Federated Church Entrance</string>
    <string name="image_lifehouse">Image of Lifehouse, CSix Meeting Entrance</string>
    <string name="image_parking">Image of Lower Packing Lot</string>

    <string name="main_event_location">Saratoga Federated Church</string>
    <string name="main_event_address">20390 Park Place, Saratoga, CA 95070</string>
    <string name="main_event_start">10:00 AM</string>
    <string name="main_event_end">1:00 PM</string>

    <!-- Activities -->
    <string name="main_activity_drawer_layout">Main Activity Drawer Layout</string>
    <string name="main_activity_coordinatorlayout">Main Activity Coordinator Layout</string>
    <string name="main_activity_content_container">Main Activity Content Container</string>
    <string name="group_detail_activity_layout">Group Detail Activity Layout</string>
    <string name="group_detail_activity_content_layout">Group Detail Activity Content Layout</string>
    <string name="event_detail_activity_layout">Event Detail Activity Layout</string>
    <string name="directin_activity_layout">Direction Activity Layout</string>
    <string name="about_activity_layout">About Activity Layout</string>
    <string name="about_activity_content_layout">About Activity Content Layout</string>

    <!-- Group Detail -->
    <string name="group_detail_land_card_view">CardView of Group Detail Landscape</string>
    <string name="group_detail_land_linear_layout">Linear Layout of Group Detail Landscape</string>
    <string name="group_detail_land_relative_layout">Relative Layout of Group Detail Landscape</string>
    <string name="group_detail_view_layout">Group Detail Layout</string>
    <string name="group_detail_group_name">Group Detail Group Name</string>
    <string name="group_detail_group_time">Group Detail Group Meeting Time</string>
    <string name="group_detail_group_location">Group Detail Group Meeting Location</string>
    <string name="scrim_view">Scrim</string>

    <!-- Event Detail -->
    <string name="event_detail_root_layout">Event Detail Root Layout</string>
    <string name="event_detail_nested_scrollview">Event Detail Nested Scrollview</string>
    <string name="event_detail_nested_linearlayout">Event Detail Nested LinearLayout</string>
    <string name="event_detail_content_layout">Event Detail Content Layout</string>
    <string name="event_detail_event_speaker_image">Event Detail Event Speaker Image</string>
    <string name="event_detail_event_topic">Event Detail Event Topic</string>
    <string name="event_detail_event_speaker">Event Detail Event Speaker</string>
    <string name="event_detail_event_time">Event Detail Event Time</string>
    <string name="event_detail_event_location">Event Detail Event Location</string>
    <string name="event_detail_event_description">Event Detail Event Description</string>
    <string name="event_detail_fab">Event Detail Floating Action Button</string>

    <!-- Signs -->
    <string name="sign_csix_entrance">Lifehouse\nCSix Entrance</string>
    <string name="sign_csix_entrance_desc">Main Entrance</string>
    <string name="sign_church_entrance">Church Entrance</string>
    <string name="sign_church_entrance_desc">Go pass here</string>
    <string name="sign_lower_parking">Lower Parking Lot</string>
    <string name="sign_lower_parking_desc">Please park here</string>

    <!-- Widget -->
    <string name="widget_text">This is a widget probably.</string>
    <string name="widget_detail_title">CSix Detail Widget</string>
    <string name="add_widget">Add widget</string>

    <string name="widget_event_title">CSix Event Widget</string>
    <string name="widget_event_layout">Event Widget Layout</string>
    <string name="widget_event_topic">Event Widget Topic</string>
    <string name="widget_event_speaker">Event WIdget Speaker</string>
    <string name="widget_event_date">Event Widget Date</string>

    <string name="widget_collection_logo">Widget Collection Logo</string>
    <string name="widget_collection_listview">Widget Collection List View</string>
    <string name="widget_collection_layout">Widget Collection Layout</string>
    <string name="widget_collection_layout_header">Widget Collection Header Layout</string>
    <string name="widget_collection_layout_list">Widget Collection List Layout</string>
    <string name="widget_collection_layout_item">Widget Collection Item Layout</string>

    <string name="widget_item_layout">Widget Collection Item Layout</string>
    <string name="widget_item_month">Widget Collection Item Month</string>
    <string name="widget_item_day">Widget Collection Item Day</string>
    <string name="widget_item_topic">Widget Collection Item Topic</string>
    <string name="widget_item_speaker">Widget Collection Item Speaker</string>

    <string name="layout_appbar">Appbar Layout</string>
    <string name="layout_collapsing_toolbar">Collapsing Toolbar Layout</string>
    <string name="imageview_appbar">AppBar ImageView</string>
    <string name="toolbar">Toolbar</string>
    <string name="nav_header_image">Navigation Header Image</string>
    <string name="icon_add_to_calendar">Add to Calendar</string>
    <string name="icon_location">Detailed Event Location</string>

    <!-- Card Views -->
    <!-- About Card -->
    <string name="card_view_about">About Card View</string>
    <string name="card_view_about_layout">About Card View Layout</string>
    <string name="card_view_about_logo">About Card View CSix Logo</string>
    <string name="card_view_about_title">About Card View Title</string>
    <string name="card_view_about_content">About Card View Text Content</string>
    <!-- Event Card -->
    <string name="card_view_event">Event Card View</string>
    <string name="card_view_event_layout">Event Card View Layout</string>
    <string name="card_view_event_speaker_image">Event Card Speaker Image</string>
    <string name="card_view_event_topic">Event Card Event Topic</string>
    <string name="card_view_event_month">Event Card View Month</string>
    <string name="card_view_event_day">Event Card View Day</string>
    <string name="card_view_event_speaker_name">Event Card Speaker Name</string>
    <!-- Group Card -->
    <string name="card_view_group">Group Card View</string>
    <string name="card_view_group_layout">Group Card View Layout</string>
    <string name="card_view_group_image">Group Card View Group Image</string>
    <string name="card_view_group_name">Group Card View Group Name</string>

    <!-- Shared Element Transition -->
    <string name="transition_name_profile">transition:PROFILE</string>
    <string name="transition_name_topic">transition:TOPIC</string>
    <string name="transition_name_speaker">transition:SPEAKER</string>
    <string name="transition_name_group_name">transition:GROUP</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">switch_preference</string>
    <string name="pref_enable_notifications_label">Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
