<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EventFragment"
    android:contentDescription="@string/event_fragment_layout">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview_event"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/recyclerview_event" />

    <!-- empty list -->
    <TextView
        android:id="@+id/recyclerview_event_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/empty_event_list"
        app:layout_anchor="@id/recyclerview_event"
        app:layout_anchorGravity="fill"
        android:contentDescription="@string/event_empty_view" />

</FrameLayout>
