<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/grid_vertical_margin"
    android:layout_marginLeft="@dimen/grid_horizontal_margin"
    android:layout_marginStart="@dimen/grid_horizontal_margin"
    android:layout_marginRight="@dimen/grid_horizontal_margin"
    android:layout_marginEnd="@dimen/grid_horizontal_margin"
    android:layout_marginTop="@dimen/grid_vertical_margin"
    android:clickable="true"
    android:elevation="@dimen/card_elevation"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    android:contentDescription="@string/card_view_group">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:contentDescription="@string/card_view_group_layout">

        <ImageView
            android:id="@+id/ivGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="2dp"
            android:src="@drawable/csix_logo"
            android:contentDescription="@string/card_view_group_image" />

        <TextView
            android:id="@+id/tvName"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:paddingBottom="4dp"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
            android:contentDescription="@string/card_view_group_name" />

    </LinearLayout>

</android.support.v7.widget.CardView>
